# xrd_sim

./: LICENSE  README.md  convert.py  main.py  mix.py  mix_utils.py  plotting.py  profiles.py  pyproject.toml  style.py  xrd_utils.py
cif/: LiCoO2.cif  LiF.cif  SrTiO3.cif
cli/: __init__.py  common.py  convert.py  main.py  mix.py
tests/: test_main.py  test_profiles.py
